[package]
name = "daily_hacker_news_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
warp = "0.3.7"
log = "0.4.21"
env_logger = "0.11.3"
serde_json = "1.0.114"
hmac = "0.12.1"
sha2 = "0.10.8"
base64 = "0.22.0"
config = "0.14.0"
bytes = "1.5.0"
rss = "2.0.7"
reqwest = "0.12.3"
scraper = "0.19.0"
serde = "1.0.197"
uuid = { version = "1.7.0", features =["v4", "fast-rng", "macro-diagnostics"] }
async-trait = "0.1.77"
syn = "2.0.52"
openssl = { version = "0.10.64", features = ["vendored"] }

[profile.release]
incremental = true
lto = true

[profile.dev]
incremental = true
lto = true
#[target.armv7-unknown-linux-gnueabihf]
#linker = "arm-linux-gnueabihf-gcc-11.4"
